[tool.poetry]
name = "step-image"
version = "0.1.0"
description = "Softlandia Talent Evaluation Program"
authors = ["Tony Benoy <me@tonybenoy.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "step_image"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.90.0"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
isort = "^5.12.0"
pylint = "^2.16.1"
pre-commit = "^3.0.4"
black = "^23.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
