[tool.poetry]
name = "step-image"
version = "0.1.0"
description = "Softlandia Talent Evaluation Program"
authors = ["Tony Benoy <me@tonybenoy.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "step_image"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.90.0"
gunicorn = "^20.1.0"
uvicorn = "^0.20.0"
jinja2 = "^3.1.2"
python-multipart = "^0.0.5"
rq = "^1.12.0"
boto3 = "^1.26.67"
sqlalchemy = "^2.0.2"
alembic = "^1.9.3"
psycopg2-binary = "^2.9.5"
opencv-python-headless = "^4.7.0.68"
pillow = "^10.0.1"
python-dotenv = "^0.21.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.0.0"
isort = "^5.12.0"
pylint = "^2.16.1"
pre-commit = "^3.0.4"
black = "^23.1.0"
types-redis = "^4.4.0.6"
sqlalchemy-stubs = "^0.4"
pytest = "^7.2.1"
coverage = "^7.1.0"
pytest-cov = "^4.0.0"
httpx = "^0.23.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "--cov"
testpaths = [
    "src/tests",
]

[tool.coverage.run]
source = ['src']
